update markov chains

--- a/index.tex
+++ b/index.tex
@@ -334,7 +334,7 @@ the shape of graphs of linear functions of one variable, e.g.
 \(f(x) = a x + b\), but the algebraic meaning rests on the following two
 general properties:
 
-\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, colback=white, arc=.35mm, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, left=2mm, leftrule=.75mm, rightrule=.15mm, breakable, opacityback=0, toprule=.15mm, titlerule=0mm, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, coltitle=black]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
 
 A \emph{linear transformation} or \emph{linear operator} is a mapping
 \(L\) between two sets of vectors with the following properties:
@@ -413,7 +413,7 @@ unchanged.
 The notion of linearity leads to the important idea of combining
 different vectors:
 
-\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, colback=white, arc=.35mm, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, left=2mm, leftrule=.75mm, rightrule=.15mm, breakable, opacityback=0, toprule=.15mm, titlerule=0mm, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, coltitle=black]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
 
 A \emph{linear combination} of \(n\) vectors \(\{ \vec v_i \}\) is a
 weighted sum of these vectors with any real numbers \(\{a_i\}\): \[ 
@@ -429,7 +429,7 @@ vector that is related to the original set. Linear combinations give a
 simple way of generating new vectors, and thus invite the following
 definition for a collection of vectors closed under linear combinations:
 
-\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, colback=white, arc=.35mm, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, left=2mm, leftrule=.75mm, rightrule=.15mm, breakable, opacityback=0, toprule=.15mm, titlerule=0mm, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, coltitle=black]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
 
 A \emph{vector space} is a collection of vectors such that a linear
 combination of any \(n\) vectors is contained in the vector space.
@@ -457,7 +457,7 @@ combinations of vectors. It turns out that it is possible to generate
 of its vectors. The challenge is to find a minimal subset of subset that
 is not redundant. In order to do this, we first introduce a new concept:
 
-\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, colback=white, arc=.35mm, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, left=2mm, leftrule=.75mm, rightrule=.15mm, breakable, opacityback=0, toprule=.15mm, titlerule=0mm, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, coltitle=black]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
 
 A set of vectors \(\{ \vec v_i \}\) is called \emph{linearly
 independent} if the only linear combination involving them that equals
@@ -475,7 +475,7 @@ the plane is linearly dependent, because there are only two dimensions
 in the vector space. This brings us to the key definition of this
 section:
 
-\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, colback=white, arc=.35mm, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, left=2mm, leftrule=.75mm, rightrule=.15mm, breakable, opacityback=0, toprule=.15mm, titlerule=0mm, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, coltitle=black]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
 
 A \emph{basis} of a vector space is a linearly independent set of
 vectors that generate (or span) the vector space. The number of vectors
@@ -607,7 +607,7 @@ together with others.
 The second step is to compute the variance-covariance matrix of the
 \(N\) variables.
 
-\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, colback=white, arc=.35mm, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, left=2mm, leftrule=.75mm, rightrule=.15mm, breakable, opacityback=0, toprule=.15mm, titlerule=0mm, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, coltitle=black]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
 
 The \emph{variance-covariance} matrix \(C\) of a data set \(X\) with
 \(n\) variables \(x_i\) and \(m\) observations is an \(n\) by \(n\)
@@ -628,7 +628,7 @@ This is accomplished by choosing a subset of \(k\) principal components
 with the largest eigenvalues. Here are the steps of principal component
 analysis (PCA):
 
-\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, colback=white, arc=.35mm, opacitybacktitle=0.6, colframe=quarto-callout-tip-color-frame, left=2mm, leftrule=.75mm, rightrule=.15mm, breakable, opacityback=0, toprule=.15mm, titlerule=0mm, bottomtitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{PCA algorithm}, bottomrule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, coltitle=black]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{PCA algorithm}, colbacktitle=quarto-callout-tip-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-tip-color-frame, opacityback=0]
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -702,7 +702,7 @@ C = D \times P
 
 Here is the outline for the transformation:
 
-\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, colback=white, arc=.35mm, opacitybacktitle=0.6, colframe=quarto-callout-tip-color-frame, left=2mm, leftrule=.75mm, rightrule=.15mm, breakable, opacityback=0, toprule=.15mm, titlerule=0mm, bottomtitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Dimensionality reduction}, bottomrule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, coltitle=black]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Dimensionality reduction}, colbacktitle=quarto-callout-tip-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-tip-color-frame, opacityback=0]
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -783,7 +783,7 @@ function within a certain interval on the \(x\)-axis, to a desired
 tolerance. We assume only that we can evaluate the function at any given
 value of \(x\). Here is the outline of the algorithm:
 
-\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, colback=white, arc=.35mm, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, left=2mm, leftrule=.75mm, rightrule=.15mm, breakable, opacityback=0, toprule=.15mm, titlerule=0mm, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Golden section search}, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, coltitle=black]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Golden section search}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -861,7 +861,7 @@ source}}
 
 \end{figure}%
 
-\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, colback=white, arc=.35mm, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, left=2mm, leftrule=.75mm, rightrule=.15mm, breakable, opacityback=0, toprule=.15mm, titlerule=0mm, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Golden section search}, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, coltitle=black]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Golden section search}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -889,7 +889,7 @@ Secant method is also a root-finding method, and can thus be used to
 find optima of functions with a computable derivative. If the derivative
 function is f(x), then the algorithm is:
 
-\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, colback=white, arc=.35mm, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, left=2mm, leftrule=.75mm, rightrule=.15mm, breakable, opacityback=0, toprule=.15mm, titlerule=0mm, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Secant algorithm}, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, coltitle=black]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Secant algorithm}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -947,7 +947,7 @@ root, by using the value of the derivative at the current point
 \(x_0 + \Delta x\) (assuming the points are close enough that the slopes
 are almost equal). Then the steps for the algorithm are:
 
-\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, colback=white, arc=.35mm, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, left=2mm, leftrule=.75mm, rightrule=.15mm, breakable, opacityback=0, toprule=.15mm, titlerule=0mm, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Newton-Raphson algorithm in 1 dimension}, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, coltitle=black]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Newton-Raphson algorithm in 1 dimension}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -1050,7 +1050,7 @@ above, if sliced in the \(x\) or \(y\) direction.
 This allows us to define the multi-dimensional equivalent of the
 derivative: the \emph{gradient} of a function,
 
-\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, colback=white, arc=.35mm, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, left=2mm, leftrule=.75mm, rightrule=.15mm, breakable, opacityback=0, toprule=.15mm, titlerule=0mm, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, coltitle=black]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
 
 The \emph{gradient} of a function \(f(\vec x)\) of multiple variables
 \(\vec x = x_1, .., x_n\) is a vector with \(n\) components, each one
@@ -1063,7 +1063,7 @@ the partial derivative with respect to the corresponding variable:
 To gain some geometric intuition about gradients, let us introduce the
 notion of contours of \(f(\vec x)\)
 
-\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, colback=white, arc=.35mm, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, left=2mm, leftrule=.75mm, rightrule=.15mm, breakable, opacityback=0, toprule=.15mm, titlerule=0mm, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, coltitle=black]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
 
 The \emph{contours} or \emph{level curves} of a function \(f(\vec x)\)
 of multiple variables \(\vec x = x_1, .., x_n\) are sets of values of
@@ -1109,7 +1109,7 @@ takes steps in the direction of the gradient, until the point is
 sufficiently close to the bottom of the valley. This is called the
 method of \emph{gradient descent}:
 
-\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, colback=white, arc=.35mm, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, left=2mm, leftrule=.75mm, rightrule=.15mm, breakable, opacityback=0, toprule=.15mm, titlerule=0mm, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Gradient descent algorithm}, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, coltitle=black]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Gradient descent algorithm}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -1147,7 +1147,7 @@ where the gradient function plays the role of the derivative in the
 1-dimensional Newton's method. In order for this to work, we need an
 equivalent to the second derivative as well.
 
-\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, colback=white, arc=.35mm, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, left=2mm, leftrule=.75mm, rightrule=.15mm, breakable, opacityback=0, toprule=.15mm, titlerule=0mm, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, coltitle=black]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
 
 For a function \(f(\vec x)\) of a vector variable \(\vec x\) with \(n\)
 components, the \emph{Hessian} is a \(n\) by \(n\) matrix, with each
@@ -1187,7 +1187,7 @@ Now that we have the multi-variable equivalents of \(f'(x)\) and
 \(f''(x)\), we can formulate the multidimensional Newton-Raphson
 algorithm using vectors and matrices:
 
-\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, colback=white, arc=.35mm, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, left=2mm, leftrule=.75mm, rightrule=.15mm, breakable, opacityback=0, toprule=.15mm, titlerule=0mm, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Multi-variable Newton-Raphson algorithm}, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, coltitle=black]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Multi-variable Newton-Raphson algorithm}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -1230,7 +1230,7 @@ method dominates. Here is an outline of the algorithm, which starts with
 a large value of \(\lambda\), assuming that the initial guess
 \(\vec x_0\) is far from the minimum:
 
-\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, colback=white, arc=.35mm, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, left=2mm, leftrule=.75mm, rightrule=.15mm, breakable, opacityback=0, toprule=.15mm, titlerule=0mm, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Levenberg-Marquardt algorithm}, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, coltitle=black]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Levenberg-Marquardt algorithm}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -1298,7 +1298,7 @@ is not periodic, and in which we are interested over the whole real
 line. To achieve that, we generalize the notion of a Fourier series from
 a sum to an integral:
 
-\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, colback=white, arc=.35mm, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, left=2mm, leftrule=.75mm, rightrule=.15mm, breakable, opacityback=0, toprule=.15mm, titlerule=0mm, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, coltitle=black]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
 
 Forward Fourier transform: \[
 G(f) =   \int_{-\infty}^\infty g(x) e^{i2\pi f x}dx
@@ -1324,7 +1324,7 @@ I believe this is purely a matter of convention. Second, mathematicians
 prefer to define the Fourier transform and the inverse transform as
 follows:
 
-\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, colback=white, arc=.35mm, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, left=2mm, leftrule=.75mm, rightrule=.15mm, breakable, opacityback=0, toprule=.15mm, titlerule=0mm, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{(Alternative) definition}, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, coltitle=black]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{(Alternative) definition}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
 
 Forward Fourier transform: \[
 G(\omega) = \int_{-\infty}^\infty g(x) e^{i \omega x}dx
@@ -1442,7 +1442,7 @@ Transform}\label{convolution-and-fourier-transform}
 We now come to one more special property of the Fourier Transform which
 is useful in many different applications.
 
-\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, colback=white, arc=.35mm, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, left=2mm, leftrule=.75mm, rightrule=.15mm, breakable, opacityback=0, toprule=.15mm, titlerule=0mm, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, coltitle=black]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
 
 The \emph{convolution} of two functions is defined as follows:
 
@@ -1458,7 +1458,7 @@ Thus, you can think about this integral as follows: for every number
 Some important properties of the convolution, which can be easily shown
 by writing down the integral definition:
 
-\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, colback=white, arc=.35mm, opacitybacktitle=0.6, colframe=quarto-callout-tip-color-frame, left=2mm, leftrule=.75mm, rightrule=.15mm, breakable, opacityback=0, toprule=.15mm, titlerule=0mm, bottomtitle=1mm, title={Properties of convolutions}, bottomrule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, coltitle=black]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title={Properties of convolutions}, colbacktitle=quarto-callout-tip-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-tip-color-frame, opacityback=0]
 
 \begin{itemize}
 \tightlist
@@ -1504,7 +1504,7 @@ h(x) \circ g(x) = \int _{-\infty} ^\infty h(x)  dx
 The reason why the convolution is so central to the application of
 Fourier Transforms is the following.
 
-\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, colback=white, arc=.35mm, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, left=2mm, leftrule=.75mm, rightrule=.15mm, breakable, opacityback=0, toprule=.15mm, titlerule=0mm, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Convolution Theorem}, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, coltitle=black]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Convolution Theorem}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
 
 The Fourier transform has the following special property with
 convolutions:
@@ -1893,7 +1893,7 @@ We can go further and compute the probability of the weather two days
 into the future, by applying the transition probabilities again:
 \(P(W\_{n+2} = S ) =\)
 \[P(W_{n+2} = S | W_{n+1} = S) P(W_{n+1} = S) + P(W_{n+2} = S | W_{n+1} = C) P(W_{n+1} = C) = 0.8 * 0.8  + 0.3* 0.2 = 0.7\]
-and also \$P(W\_\{n+2\} = C) = \$
+and also \(P(W_{n+2} = C) =\)
 \[P(W_{n+2} = C | W_{n+1} = S) P(W_{n+1} = S) + P(W_{n+2} = C | W_{n+1} = C) P(W_{n+1} = C) = 0.2 *0.8  + 0.7* 0.2 = 0.3\]
 
 These calculations could be written more succinctly as a product of a
@@ -1922,9 +1922,13 @@ states) so the probability distributions can be written as vectors
 \emph{transition probability} \(P(X_{n+1} = x_i | X_n = x_j)\), where
 \(x_i\) and \(x_j\) are the \(i\)-th and the \(j\)-th state of the
 random variable \(X_n\). Then, as we saw above, the probability
-distribution at time \(n\) is given by: \[ 
+distribution at time \(n\) is given by:
+
+\[ 
 P_{n+1} = MP_n \; \Longrightarrow P_{n} = M^nP_0
-\] where \(P_0\) is initial probability distribution.
+\]
+
+where \(P_0\) is initial probability distribution.
 
 What makes such a stochastic process \emph{Markovian} is a deep
 assumption which is implicit in our definition. We assumed that we can
@@ -1950,9 +1954,9 @@ properties that help us compute the Markov chain they generate:
 \tightlist
 \item
   By construction each column of a Markov matrix (with \(m\) states) has
-  to add up to 1, because
-  \[\sum_{i=1}^{m} \pi_{ij} = \sum_{i=1}^{m} P(X_{n+1} = x_i | X_n = x_j) = 1\]
-  since all possible outcomes have to add up to 1.
+  to add up to 1, because \[
+  \sum_{i=1}^{m} \pi_{ij} = \sum_{i=1}^{m} P(X_{n+1} = x_i | X_n = x_j) = 1
+  \] since all possible outcomes have to add up to 1.
 \item
   Multiplying a probability distribution vector by a Markov matrix
   preserves the property that all elements add up to 1 (check for
@@ -1995,11 +1999,16 @@ parent has \(AA\) is \(P (A | AA) = 1\), similarly \(P(A | aa) = 0\),
 and \(P(A | Aa) = 1/2\). Then we can calculate the total probability of
 inheriting an allele in the next generation is:
 \[ P(A) = P (A | AA)p_0 + P(A | aa) q_0 + P(A | Aa) r_0 = p_0 + r_0/2\]
+
 \[ P(a) = P (A | AA)p_0 + P(A | aa) q_0 + P(A | Aa) r_0 = q_0 + r_0/2\]
+
 The probability of having the genotype \(AA\) is the product of the two
 probabilities, because of the independence assumption in random mating.
 Thus we obtain the frequencies of the three genotypes in the next
-generation: \[P(AA) = P(A) P(A) = (p_0 + r_0/2)^2 = p_1\]
+generation:
+
+\[P(AA) = P(A) P(A) = (p_0 + r_0/2)^2 = p_1\]
+
 \[P(aa) = P(a) P(a) = (q_0 + r_0/2)^2 = q_1\]
 \[P(Aa) = P(A) P(a) + P(a)P(A) = 2(q_0 + r_0/2)(p_0 + r_0/2) = r_1\]
 
@@ -2019,7 +2028,7 @@ matrix is then:
 \[ M = \left(\begin{array}{ccc}p + r/2 & 0 & p/2 + r/4 \\0 & q + r/2 & q/2 + r/4 \\ q + r/2 &  p + r/2 & p/2 + q/2 + r/2\end{array}\right) \]
 
 Here we can find the equilibrium distribution by requiring that
-\(M P_eq = P_eq\), which is equivalent to the following equations:
+\(M P_s = P_s\), which is equivalent to the following equations:
 
 \[ p = p (p + r/2) + r (p/2 + r/4) = (p + r/2)^2\]
 \[ q = q(q + r/2) + r (q/2 + r/4) = (q + r/2)^2 \]
@@ -2051,7 +2060,9 @@ in generation \(t\) as follows:
 
 \[   
 \left(\begin{array}{c} P_A \\ P_G \\ P_C \\ P_T \end{array}\right)_{t+1}  = \left(\begin{array}{cccc}1-\alpha & \alpha/3 & \alpha/3 & \alpha/3 \\\alpha/3 & 1-\alpha & \alpha/3 & \alpha/3 \\\alpha/3 & \alpha/3 & 1-\alpha & \alpha/3 \\\alpha/3 & \alpha/3 & \alpha/3 & 1-\alpha\end{array}\right) \left(\begin{array}{c} P_A \\ P_G \\ P_C \\ P_T \end{array}\right)_t 
-\] This model is very simple: it only considers substitutions, although
+\]
+
+This model is very simple: it only considers substitutions, although
 other mutations are possible, e.g.~insertions and deletions, although
 they are typically more disruptive and thus more rare, and it treats all
 substitutions as equally likely, which is not empirically true. The
@@ -2063,7 +2074,9 @@ on the parameter \(\alpha\), only the eigenvalues do:
 
 \[  
 \left(\begin{array}{c} 1/4 \\ 1/4 \\ 1/4 \\ 1/4 \end{array}\right) \lambda =1; \; \left(\begin{array}{c} 1/4 \\ -1/4 \\ 1/4 \\ -1/4 \end{array}\right)\lambda =1-4/3\alpha;  \; \left(\begin{array}{c} 1/4 \\ -1/4 \\ -1/4 \\ 1/4 \end{array}\right)\lambda =1-4/3\alpha;  \; \left(\begin{array}{c} 1/4 \\ -1/4 \\ 1/4 \\ -1/4 \end{array}\right)\lambda =1-4/3\alpha 
-\] Notice two things: first, the first eigenvector is the equilibrium
+\]
+
+Notice two things: first, the first eigenvector is the equilibrium
 distribution and has the same frequencies for all four bases. Second,
 the three eigenvectors with eigenvalues smaller than 1 have negative
 entries, so they cannot be probability distributions themselves
@@ -2079,9 +2092,9 @@ algebra textbooks.)
 Computationally, this allows us to predict the time evolution of a
 distribution of bases in a DNA sequence for any given initial
 distribution, by using repeated matrix multiplication as above. Figure
-\ref{fig:mc_base_sub} shows the results starting with a non-equilibrium
-base distribution for 20 generations, with different substitution rates.
-It is evident that for a faster substitution rate the approach to the
+below shows the results starting with a non-equilibrium base
+distribution for 20 generations, with different substitution rates. It
+is evident that for a faster substitution rate the approach to the
 equilibrium distribution is faster. This demonstrates an important role
 of the second-largest eigenvalue of the Markov matrix: it determines the
 speed of convergence to the equilibrium distribution (more on this
@@ -2142,13 +2155,13 @@ appropriate eigenvalue. Thus,
 \[ 
 P_t = M^t P_0 =   1^t \left(\begin{array}{c} 1/4 \\ 1/4 \\ 1/4 \\ 1/4 \end{array}\right) + (1-4/3\alpha)^t\left( \left(\begin{array}{c} 1/4 \\ -1/4 \\ 1/4 \\ -1/4 \end{array}\right) +  \left(\begin{array}{c} 1/4 \\ -1/4 \\ -1/4 \\ 1/4 \end{array}\right) + \left(\begin{array}{c} 1/4 \\ -1/4 \\ 1/4 \\ -1/4 \end{array}\right) \right)
 \] The first element of \(P_t\) is the probability of a nucleotide
-remaining \(A\) after \(t\) generation, and it is: \$ P\_t (A ) = 1/4
-+3/4(1-4/3\alpha)\^{}t \$. For \(t=0\), the probability is 1, as it
-should be, and as \(t \rightarrow \infty\), \(P_t (A) \rightarrow 1/4\),
-since this is the equilibrium probability distribution. Note that the
-expression is the same for all the other letters, so we have found the
-expression for any nucleotide remaining the same after \(t\)
-generations.
+remaining \(A\) after \(t\) generation, and it is:
+\(P_t (A ) = 1/4 +3/4(1-4/3\alpha)\^t\). For \(t=0\), the probability is
+1, as it should be, and as \(t \rightarrow \infty\),
+\(P_t (A) \rightarrow 1/4\), since this is the equilibrium probability
+distribution. Note that the expression is the same for all the other
+letters, so we have found the expression for any nucleotide remaining
+the same after \(t\) generations.
 
 Now let us get to the question of calculating the time that two
 sequences have evolved from each other. Denote by \(m\) the fraction of
@@ -2156,6 +2169,7 @@ sites in two aligned sequences with different letters, and \(q\) is the
 probability of a nucleotide remaining the same, which is the given by
 the expression for \(P_t(A)\). Thus
 \(m = 1 - q = 3/4 - 3/4(1-4/3\alpha)^t\). This can be solved for \(t\):
+
 \[ 
 t = \frac{\log (1 - 4/3 m)}{\log (1 -4/3 \alpha)}
 \]
@@ -2172,20 +2186,22 @@ counts all substitutions, including those which reverse an earlier
 mutation, and cause the sequence to revert to its initial letter.
 
 Now, let us assume \(\alpha\) is small, as typically the number of
-substitutions per generation per nucleotide is small {[}reference{]}.
-Then, by a Taylor expansion of the logarithm around 1,
+substitutions per generation per nucleotide is small. Then, by a Taylor
+expansion of the logarithm around 1,
 \(\log (1 -4/3 \alpha) \approx - 4/3\alpha\). Using the formula for
 \(t\) from above with this approximation, we find the Jukes-Cantor
 phylogenetic distance to be:
 
 \[ 
 d_{JC} = \frac{\log (1 - 4/3 m)}{ -4/3 \alpha} \alpha =  -\frac{3}{4}\log (1 - 4/3 m)
-\] This formula has the correct behavior in the two limits: when
-\(m = 0\), \(d_{JC} = 0\) (identical sequences have zero distance), and
-when \(m \rightarrow 3/4\), \(d_{JC} \rightarrow \infty\), since 3/4 is
-the maximum possible fraction of differences under the Jukes-Cantor
-model. Thus, we have obtained an analytic formula for the phylogenetic
-distance based on a Markov chain model of substitutions.
+\]
+
+This formula has the correct behavior in the two limits: when \(m = 0\),
+\(d_{JC} = 0\) (identical sequences have zero distance), and when
+\(m \rightarrow 3/4\), \(d_{JC} \rightarrow \infty\), since 3/4 is the
+maximum possible fraction of differences under the Jukes-Cantor model.
+Thus, we have obtained an analytic formula for the phylogenetic distance
+based on a Markov chain model of substitutions.
 
 \subsection{Kimura model}\label{kimura-model}
 
